# auto_video_organize

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
doc/: README.en.md  README.ja.md  README.zh-CN.md  README.zh-TW.md
locales/: en-US.yml  ja-JP.yml  zh-CN.yml  zh-TW.yml
src/: init.rs  lib.rs  main.rs  signal.rs
src/component/: auto_move_by_type.rs  component.rs  contact_sheet_generator.rs  duplication_checker.rs  mod.rs  orphan_file_mover.rs  traits.rs  video_encoder.rs
src/component/auto_move_by_type/: file_categorizer.rs  main.rs  mod.rs
src/component/contact_sheet_generator/: batch_extractor.rs  contact_sheet_merger.rs  main.rs  mod.rs  scene_detector.rs  thumbnail_extractor.rs  timestamp_selector.rs  uniform_selector.rs
src/component/duplication_checker/: duplication_detector.rs  main.rs  mod.rs
src/component/orphan_file_mover/: file_grouper.rs  main.rs  mod.rs
src/component/video_encoder/: cpu_monitor.rs  ffmpeg_command.rs  main.rs  mod.rs  task_scheduler.rs
src/config/: file_type.rs  load.rs  mod.rs  save.rs  types.rs
src/data/: file_type_table.json
src/menu/: handlers.rs  main_menu.rs  menu.rs  mod.rs
src/tools/: contact_sheet_merger.rs  cpu_monitor.rs  duplication_detector.rs  ffmpeg_command.rs  ffprobe_info.rs  file_categorizer.rs  file_hasher.rs  file_scanner.rs  file_tools.rs  hash.rs  hash_table.rs  mod.rs  orphan_file_mover.rs  path_validator.rs  task_scheduler.rs  thumbnail_extractor.rs  timestamp_selector.rs  video_scanner.rs
tests/: e2e_test.rs  integration_test.rs
(+4 files in other folders)
