[package]
name = "auto_video_organize"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.12.0"
console = "0.16.1"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
sysinfo = "0.37.2"
ctrlc = "3.5"
blake3 = "1.8"
rayon = "1.11"
regex = "1.12"
indicatif = "0.17"
uuid = { version = "1.16", features = ["v4"] }

[dev-dependencies]
tempfile = "3.23"
